--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -7,8 +7,9 @@
     right: 0;
     z-index: 1000;
     background-color: white;
-    max-height: var(--header-height);
+    height: var(--header-height);
 }
+
 
 .nav-visible {
     transform: translateY(0);
@@ -116,6 +117,10 @@
 }
 
 @media (max-width: 992px) {
+
+    .offcanvas {
+        height: 100vh;
+    }
 
     /* Menu items sans language switch */
     .nav-list {
